test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 02 Jan 2026 16:55:21 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="fECr/x3daTu5Fu8xUCHnTgupJgyqC3MY", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}